[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.3.1",
]

[project]
name = "lixinger"
version = "0.1.0"
description = "Lixinger SDK for Python (Unofficial)"
authors = [
    {name = "Chaoying", email = "chaoying2022@gmail.com"},
]
dependencies = [
    "pandera>=0.14.5",
    "pydantic>=1.10.7",
    "requests>=2.29.0",
    "dynaconf>=3.1.12",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
cache_dir = ".pytest_cache/"
addopts = "-s -p no:warnings"
asyncio_mode = "auto"
